made some name changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="robots" content="noindex" />
 
-	<title>David Kenny - Award winning Digital Product Designer from London</title>
+	<title>Tony Bergstrom - Secondary Tagline</title>
 
 	<meta name="description" content="David Kenny - Award winning Digital Product Designer from London.">
 	<meta http-equiv="Content-Type" content="David Kenny - Award winning Digital Product Designer from London." />
@@ -28,8 +28,8 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
 
 	<!-- Typekit -->
-	<script type="text/javascript" src="http://use.typekit.com/ain2rty.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<!--	<script type="text/javascript" src="http://use.typekit.com/ain2rty.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 
 <!-- END head -->
 </head>
@@ -46,7 +46,7 @@
 		<div class="logo">
 			<span><img src="images/logo.png" /></span>
 		</div>
-		<h1>David Kenny</h1>
+		<h1>Tony Bergstrom</h1>
 		<h2><span><span class="char-d">D</span><span class="char-e">e</span><span class="char-s">s</span><span class="char-i">i</span><span class="char-g">g</span><span class="char-n">n</span><span class="char-e">e</span><span class="char-r">r</span></span></h2>
 	</header>
 
@@ -56,14 +56,14 @@
 	</div>
 
 	<div class="email-link">
-		<span><a class="button-email ss-mail" href="mailto:hello@davidkenny.me">Email me<span>&raquo;</span></a></span>
+		<span><a class="button-email ss-mail" href="mailto:tb@tonybergstrom.com">Email me<span>&raquo;</span></a></span>
 	</div>
 
 
 	<footer role="contentinfo" class="clearfix fade-in three">
 		<ul class="external-links">
-			<li><a href="http://twitter.com/david_kenny" target="_blank" title="Follow me on Twitter" class="button-twitter">Twitter<span>&raquo;</span></a></li>
-			<li><a href="http://www.linkedin.com/in/davidkenny" target="_blank" title="Add me to your professional network on LinkedIn" class="button-linkedin">LinkedIn<span>&raquo;</span></a></li>
+			<li><a href="http://twitter.com/abergstrom" target="_blank" title="Follow me on Twitter" class="button-twitter">Twitter<span>&raquo;</span></a></li>
+			<li><a href="http://ca.linkedin.com/in/tonybergstrom" target="_blank" title="Add me to your professional network on LinkedIn" class="button-linkedin">LinkedIn<span>&raquo;</span></a></li>
 			<li><a href="http://www.behance.net/davidkenny" target="_blank" title="View my portfolio on Behance" class="button-behance">Behance<span>&raquo;</span></a></li>
 			<li><a href="http://dribbble.com/davidkenny" target="_blank" title="See what I'm working on" class="button-dribbble">Dribbble<span>&raquo;</span></a></li>
 		</ul>
