--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="robots" content="noindex" />
 
 	<title>Tony Bergstrom - Secondary Tagline</title>
 
@@ -23,36 +18,33 @@
 
         <link rel="stylesheet" type="text/css" media="all" href="css/reset.css" />
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
-	<link rel="shortcut icon" type="image/ico" href="./favicon.ico">
-	<link rel="apple-touch-icon" href="touch-icon-iphone.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
 </head>
 
 <html>
 <body>
 
-<!--[if lt IE 7]>
-<p class=chromeframe>
-Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.
-</p><![endif]-->
+
 
 <div class="wrap">
   <header role="banner" class="fade-in one">
-<div class="logo">
-  <span><img src="images/logo.png" /></span>
+
+
+<div class="robes">
+ <span />
 </div>
 
+  
 <h1>Tony Bergstrom</h1>
 
-<h2><span><span class="char-r">something</span></span></h2>
+
+
+<h2><span><span class="robes"></span></span></h2>
 </header>
 
 <div role="main" id="main" class="clearfix fade-in two">
   <p class="about">I am a Usability Specialist with a
   background in social
-  computing, human computer interaction, and visualization. Presently
-  in Kitchener-Waterloo, Ontario, I work with <a href="http://desire2learn.com">Desire2Learn</a>. I'm driven to ensure best experience for both students and instructors.</p>
+  computing, human computer interaction, and visualization. In Kitchener-Waterloo, Ontario, I work with <a href="http://desire2learn.com">Desire2Learn</a>. I'm driven to ensure best experience for both students and instructors.</p>
   <p class="awards">Formerly found in the States, I completed my
   masters and doctorate work on creating new social cues through
   Computer Mediated Communication
@@ -66,14 +58,19 @@ Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a
 
 <footer role="contentinfo" class="clearfix fade-in three">
 <ul class="external-links">
-  <li><a href="http://www.linkedin.com/in/tonybergstrom" title="Connect on LinkedIn" class="button-linkedin">LinkedIn<span>&raquo;</span></a></li>
-  <li><a href="http://facebook.com/tony.bergstrom" title="Find me on Facbeook" class="button-facebook">Facebook<span>&raquo;</span></a></li>
+  <li><a href="http://www.linkedin.com/in/tonybergstrom" title="Connect on LinkedIn" class="button-linkedin">LinkedIn<span alt="">&raquo;</span></a></li>
+  <li><a href="http://facebook.com/tony.bergstrom" title="Find me on Facbeook" class="button-facebook">Facebook<span alt="">&raquo;</span></a></li>
   <li><a href="http://www.twitter.com/abergstrom" title="Follow
   me on Twitter"
-  class="button-twitter">Twitter<span>&raquo;</span></a></li>
-  <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See my work at Illinois" class="button-illinois">University of Illinois<span>&raquo;</span></a></li>
-  <li><a href="http://flickr.com/photos/bergstrom" title="See what I've posted on flickr" class="button-flickr">Flickr<span>&raquo;<span></a></li>
-  <li><a class="button-email" href="mailto:tb@tonybergstrom.com">Email me<span>&raquo;</span></a></li>
+  class="button-twitter">Twitter<span alt="">&raquo;</span></a></li>
+  <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See
+  my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
+  <li><a href="http://flickr.com/photos/bergstrom" title="See what
+  I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
+  <li><a class="button-email"
+  href="mailto:tb@tonybergstrom.com">Email<span
+  alt="">&raquo;</span></a></li>
+  <li><a class="footer-email" href="mailto:tb@tonybergstrom.com">tb@tonybergstrom.com</a></li>
 </ul>
 
 
@@ -82,14 +79,6 @@ Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a
 
         </footer>
       </div>
-
-	<script src="js/libs/modernizr-2.5.3.min.js"></script>
-
-	<!--[if (gte IE 6)&(lte IE 8)]>
-	<script type="text/javascript" src="js/libs/selectivizr-min.js"></script>
-	<noscript><link rel="stylesheet" href="[css/fallback.css]" /></noscript>
-	<![endif]-->
-
 
 <!--END body-->
 </body>
