Got the alignment working better, experimenting with pink.

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
   <li><a href="http://www.twitter.com/abergstrom" title="Follow
   me on Twitter"
   class="button-twitter">Twitter<span alt="">&raquo;</span></a></li>
-  <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See
+ <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See
   my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
   <li><a href="http://flickr.com/photos/bergstrom" title="See what
   I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
   <li><a class="button-email"
   href="mailto:tb@tonybergstrom.com">Email<span
   alt="">&raquo;</span></a></li>
-  <li><a class="footer-email" href="mailto:tb@tonybergstrom.com">tb@tonybergstrom.com</a></li>
+  <li class="footer-email"><a class="footer-email" href="mailto:tb@tonybergstrom.com">tb@tonybergstrom.com</a></li>
 </ul>
 
 
