Going Live with this

--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
   computing, human computer interaction, and visualization. In Kitchener-Waterloo, Ontario, I work with <a href="http://desire2learn.com">Desire2Learn</a>. I'm driven to ensure best experience for both students and instructors.</p>
   <p class="awards">Formerly found in the States, I completed my
   masters and doctorate work on creating new social cues through
-  Computer Mediated Communication
   at the <a
   href="http://cs.illinois.edu/">University of Illinois</a> Computer
   Science Department as a part of the <a
-  href="http://social.cs.uiuc.edu">Social Spaces</a> group. </p>
+  href="http://social.cs.uiuc.edu">Social Spaces</a> group.</p>
 </div>
 
 
@@ -67,7 +66,7 @@
   my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
   <li><a href="http://flickr.com/photos/bergstrom" title="See what
   I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
-  <li><a class="button-email"
+  <li class="button-email"><a class="button-email"
   href="mailto:tb@tonybergstrom.com">Email<span
   alt="">&raquo;</span></a></li>
   <li class="footer-email"><a class="footer-email" href="mailto:tb@tonybergstrom.com">tb@tonybergstrom.com</a></li>
