Cleaning up the title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Tony Bergstrom - Secondary Tagline</title>
+	<title>Tony Bergstrom</title>
 
 	<meta name="description" content="Tony Bergstrom - Ux and HCI Researcher">
 	<meta http-equiv="Content-Type" content="David Kenny - Ux and
