updated position and D2L name

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </header>
 
 <div role="main" id="main" class="clearfix fade-in two">
-  <p class="about">I am a Usability Specialist with a
+  <p class="about">I am a Senior Usability Specialist with a
   background in social
-  computing, human computer interaction, and visualization. In Kitchener-Waterloo, Ontario, I work with <a href="http://desire2learn.com">Desire2Learn</a>. I'm driven to ensure best experience for both students and instructors.</p>
+  computing, human computer interaction, and visualization. In Kitchener-Waterloo, Ontario, I work with <a href="http://d2l.com">D2L</a>. I'm driven to ensure best experience for both students and instructors.</p>
   <p class="awards">Formerly found in the States, I completed my
   masters and doctorate work on creating new social cues through
   Computer Mediated Communication
