Fixing strange line breaks

--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
 <ul class="external-links">
   <li><a href="http://www.linkedin.com/in/tonybergstrom" title="Connect on LinkedIn" class="button-linkedin">LinkedIn<span alt="">&raquo;</span></a></li>
   <li><a href="http://facebook.com/tony.bergstrom" title="Find me on Facbeook" class="button-facebook">Facebook<span alt="">&raquo;</span></a></li>
-  <li><a href="http://www.twitter.com/abergstrom" title="Follow
-  me on Twitter"
+  <li><a href="http://www.twitter.com/abergstrom" title="Follow me on Twitter"
   class="button-twitter">Twitter<span alt="">&raquo;</span></a></li>
- <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See
-  my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
-  <li><a href="http://flickr.com/photos/bergstrom" title="See what
-  I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
+ <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
+  <li><a href="http://flickr.com/photos/bergstrom" title="See what I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
   <li><a class="button-email"
   href="mailto:tb@tonybergstrom.com">Email<span
   alt="">&raquo;</span></a></li>
