--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Tony Bergstrom - Secondary Tagline</title>
+	<title>Tony Bergstrom, PhD</title>
 
 	<meta name="description" content="Tony Bergstrom - Ux and HCI Researcher">
 	<meta http-equiv="Content-Type" content="David Kenny - Ux and
@@ -42,9 +42,11 @@
 </header>
 
 <div role="main" id="main" class="clearfix fade-in two">
-  <p class="about">I am a Senior Usability Specialist with a
-  background in social
-  computing, human computer interaction, and visualization. In Kitchener-Waterloo, Ontario, I work with <a href="http://d2l.com">D2L</a>. I'm driven to ensure best experience for both students and instructors.</p>
+  <p class="about">I am a Senior Usability Specialist at <a
+  href="http://d2l.com">D2L</a> in Kitchener-Waterloo. I leverage my
+  background in social computing, human computer interaction, and
+  visualization to advocate for our instructors, students, and others
+  who use our platform.</p>
   <p class="awards">Formerly found in the States, I completed my
   masters and doctorate work on creating new social cues through
   Computer Mediated Communication
