--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <head>
@@ -33,16 +32,13 @@
  <span />
 </div>
 
-  
 <h1>Tony Bergstrom</h1>
-
-
 
 <h2><span><span class="robes"></span></span></h2>
 </header>
 
 <div role="main" id="main" class="clearfix fade-in two">
-  <p class="about">I am a Senior Usability Specialist at <a
+  <p class="about">I am a Senior UX Researcher at <a
   href="http://d2l.com">D2L</a> in Kitchener-Waterloo. I leverage my
   background in social computing, human computer interaction, and
   visualization to advocate for our instructors, students, and others
@@ -64,7 +60,7 @@
   <li><a href="http://facebook.com/tony.bergstrom" title="Find me on Facbeook" class="button-facebook">Facebook<span alt="">&raquo;</span></a></li>
   <li><a href="http://www.twitter.com/abergstrom" title="Follow me on Twitter"
   class="button-twitter">Twitter<span alt="">&raquo;</span></a></li>
- <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>
+<!-- <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>-->
   <li><a href="http://flickr.com/photos/bergstrom" title="See what I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
   <li><a class="button-email"
   href="mailto:tb@tonybergstrom.com">Email<span
