update for shopify

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
 
 <div role="main" id="main" class="clearfix fade-in two">
   <p class="about">I am a Senior Usability Specialist at <a
-  href="http://d2l.com">D2L</a> in Kitchener-Waterloo. I leverage my
-  background in social computing, human computer interaction, and
-  visualization to advocate for our instructors, students, and others
-  who use our platform.</p>
+  href="http://shopify.com">Shopify</a> in Kitchener-Waterloo. I leverage my
+  background in UX research, product design, and academic research to make commerce better for all entrepeneurs. Ultimately I seek to provide insigt for whotever design challenge we have at hand.</p>
   <p class="awards">Formerly found in the States, I completed my
   masters and doctorate work on creating new social cues through
   Computer Mediated Communication
