Updated for Purdue position

--- a/index.html
+++ b/index.html
@@ -48,16 +48,24 @@
 </header>
 
 <div role="main" id="main" class="clearfix fade-in two">
-  <p class="about">I am a Senior Usability Specialist at <a
-  href="http://shopify.com">Shopify</a> in Kitchener-Waterloo. I leverage my
-  background in UX research, product design, and academic research to make commerce better for all entrepeneurs. Ultimately I seek to provide insight for whatever design challenge we have at hand.</p>
-  <p class="awards">Formerly found in the States, I completed my
+  <p class="about">I am an Assistant Professor of Practice in the
+  <a href="http://cs.purdue.edu">Computer Science Department</a> at
+  <a href="http://purdue.edu">Purdue University</a>. Originally from
+  Indiana, I have made my way back after spending grad school in
+  <a href="http://cs.illinois.edu">CS at University of Illinois</a>
+  where I completed my
   masters and doctorate work on creating new social cues through
-  Computer Mediated Communication
-  at the <a
-  href="http://cs.illinois.edu/">University of Illinois</a> Computer
-  Science Department as a part of the <a
-  href="http://social.cs.uiuc.edu">Social Spaces</a> group. </p>
+  Computer Mediated Communication as a part of the <a
+  href="http://social.cs.uiuc.edu">Social Spaces</a> group.</p>
+
+  <p class="awards">As a professor of practice, I have spent a
+  significant time in the industry of software development. My caareer
+  combines elements of user
+  experience research, product design, and data analysis. As a part of <a href="http://d2l.com">D2L</a>, I developed
+  a strong affinity for better educational experiences and learning. I moved on to improve
+  entrepenueral experiences at <a href="http://shopify.com">Shopify</a>
+  for a short while before returning to the educational space as a
+  professor.</p>
 </div>
 
 
@@ -71,9 +79,10 @@
 <!-- <li><a href="http://social.cs.uiuc.edu/people/bergstrom/" title="See my work at Illinois" class="button-illinois">U. Illinois<span alt="">&raquo;</span></a></li>-->
   <li><a href="http://flickr.com/photos/bergstrom" title="See what I've posted on flickr" class="button-flickr">Flickr<span alt="">&raquo;<span></a></li>
   <li><a class="button-email"
-  href="mailto:tb@tonybergstrom.com">Email<span
+  href="mailto:bgstm@purdue.edu">Email<span
   alt="">&raquo;</span></a></li>
-  <li class="footer-email"><a class="footer-email" href="mailto:tb@tonybergstrom.com">tb@tonybergstrom.com</a></li>
+  <li class="footer-email"><a class="footer-email"
+  href="mailto:bgstm@purdue.edu">bgstm@purdue.edu</a></li>
 </ul>
 
 
