--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   href="http://social.cs.uiuc.edu">Social Spaces</a> group.</p>
 
   <p class="awards">As a professor of practice, I have spent a
-  significant time in the industry of software development. My caareer
+  significant time in the industry of software development. My career
   combines elements of user
   experience research, product design, and data analysis. As a part of <a href="http://d2l.com">D2L</a>, I developed
   a strong affinity for better educational experiences and learning. I moved on to improve
