spelling error, for years.. smh

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   combines elements of user
   experience research, product design, and data analysis. As a part of <a href="http://d2l.com">D2L</a>, I developed
   a strong affinity for better educational experiences and learning. I moved on to improve
-  entrepenueral experiences at <a href="http://shopify.com">Shopify</a>
+  entrepreneurial experiences at <a href="http://shopify.com">Shopify</a>
   for a short while before returning to the educational space as a
   professor.</p>
 </div>
