Removing twitter, minor text updates.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+AA<!doctype html>
 
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,10 +49,10 @@
 
 <div role="main" id="main" class="clearfix fade-in two">
   <p class="about">I am an Assistant Professor of Practice in the
-  <a href="http://cs.purdue.edu">Computer Science Department</a> at
+  <a href="https://www.cs.purdue.edu/people/faculty/bgstm.html">Computer Science Department</a> at
   <a href="http://purdue.edu">Purdue University</a>. Originally from
   Indiana, I have made my way back after spending grad school in
-  <a href="http://cs.illinois.edu">CS at University of Illinois</a>
+  CS at University of Illinois
   where I completed my
   masters and doctorate work on creating new social cues through
   Computer Mediated Communication as a part of the <a
@@ -73,11 +73,6 @@
 <footer role="contentinfo" class="clearfix fade-in three">
 <ul class="external-links">
   <li><a href="http://www.linkedin.com/in/tonybergstrom" title="Connect on LinkedIn" class="button-linkedin">LinkedIn<span alt="">&raquo;</span></a></li>
-    <li><a href="http://www.twitter.com/bgstm" title="Follow me on Twitter"
-  class="button-twitter">Twitter<span alt="">&raquo;</span></a></li>
-  <li><a class="button-email"
-  href="mailto:bgstm@purdue.edu">Email<span
-  alt="">&raquo;</span></a></li>
   <li class="footer-email"><a class="footer-email"
   href="mailto:bgstm@purdue.edu">bgstm@purdue.edu</a></li>
 </ul>
